# zethia

./: .gitignore  BOILERPLATE.md  README.md  package-lock.json  package.json
circuits/noir/: Nargo.toml  Prover.toml
circuits/noir/src/: main.nr
contracts/soroban/verifier/: Cargo.toml  zethia_verifier.wasm
contracts/soroban/verifier/src/: lib.rs
docs/: DEMO_VIDEO_PLAN.md  MEMORY.md  PITCH.md  architecture.md  prd.md  tasks.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/demo/: page.tsx
src/app/proof/: page.tsx
src/components/credentials/: CredentialCard.tsx
src/components/layout/: nav.tsx
src/components/wallet/: WalletConnect.tsx
src/components/web3/: connect-button.tsx  web3-provider.tsx
src/lib/: credentials.ts  noir.ts  soroban.ts  stellar.ts  web3.ts
