[package]
name = "zethia-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "27.0.0-rc.1"

[dev-dependencies]
soroban-sdk = { version = "27.0.0-rc.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true
